# TravelingSaleseman

./: CMakeLists.txt  bla  citiesxy-1.txt  citiesxy-2.txt
src/: Cities.cpp  Cities.h  Praktikum3.cpp  TSPGenome.h  TSPOrganism.h  TSPUtil.cpp  TSPUtil.h
src/GA/: GASolution.cpp  GASolution.h  Gene.h  Genome.cpp  Genome.h  IntGene.h  Logger.h  Organism.cpp  Organism.h  PermutationGenome.h  Util.h
